# Calude_Code

./: .gitignore  CLAUDE.md  OPTION-A-COMPLETE.md  POC-STATUS.md  README.md  package-lock.json  package.json
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
apps/api/: .coverage  .env.example  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/src/: __init__.py  config.py  database.py  main.py
apps/api/src/models/: __init__.py  base.py  batch.py  generation_metadata.py  project.py  project_content.py  user.py
apps/api/src/repositories/: __init__.py  base_repository.py  batch_repository.py  user_repository.py
apps/api/src/routes/: templates.py
apps/api/src/services/: template_service.py
apps/api/tests/: conftest.py  test_batch_repository.py  test_config.py  test_database.py  test_main.py  test_user_repository.py
apps/api/tests/integration/: test_templates_api.py
apps/api/tests/unit/services/: test_template_service.py
apps/web/: .env.example  README.md  package.json  tailwind.config.js  vite.config.ts  (+2 more)
docs/: ai-poc-plan.md  architecture.md  brief.md  company-branding.md  figma-design-specifications.md  front-end-spec.md  prd.md  technology-research-report.md
innovation-tax-relief-analysis/: CHARTS_SUMMARY.md  CHART_CORRECTIONS_SUMMARY.md  FINAL_CHART_UPDATE.md  INOV_BRANDING_APPLIED.md  project-brief.md
poc/: EXECUTION-CHECKLIST.md  EXTRACT-EXAMPLES.md  README.md  RECRUIT-NATIVE-SPEAKER.md  test-cases.md
(+194 files in other folders)
